--- a/templates/racket/racketDetail.html
+++ b/templates/racket/racketDetail.html
@@ -28,7 +28,7 @@
                                   width="50%"></div>
                         <br>
                         <div class="t-text-[10px] sm:t-text-[15px]">
-                            <span class="t-text-[15px] sm:t-text-[25px]">{{racketItems.manufacturer}}</span><br>
+                            <span class="t-text-[15px] sm:t-text-[25px]">{{racketItems.RacketBrand.name}}</span><br>
                             <span>무게 : {{racketItems.weight}} gr</span><br>
                             <span>패턴 : {{racketItems.pattern}}</span><br>
                             <span>헤드사이즈 : {{racketItems.headsize}} sq</span><br>
