--- a/templates/layout.html
+++ b/templates/layout.html
@@ -59,7 +59,7 @@
                 <a class="nav-link" aria-current="page" href="{%url 'racket:racketMain'%}">라켓</a>
                 <a class="nav-link" href="{%url 'player:playerMain'%}" tabindex="-1" aria-disabled="true">선수도감</a>
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">스트링</a>
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">About 세나라</a>
+                <a class="nav-link " href="{%url 'aboutSNR'%}"  aria-disabled="true">About 세나라</a>
 
             </div>
         </div>
