--- a/templates/main.html
+++ b/templates/main.html
@@ -10,6 +10,7 @@
 
     <marquee scrollamount=8>
         <h4 class="mt-3 t-mb-9 t-text-[11px] sm:t-text-[13px] lg:t-text-[15px]">
+            <img src="https://i.imgur.com/0fDAAdi.png" alt="" class="t-inline-block">
             어서오세요!🧡╰( °▽° )_🎾 테린이부터 테고수까지 모두의 사랑방입니다🤗 </h4></marquee>
 </div>
 
@@ -17,7 +18,7 @@
 
 
 <!-- Slider main container -->
-<div class="swiper t-w-[100%] lg:t-w-[60%] t-mt-[30px]">
+<div class="swiper t-w-[100%] lg:t-w-[50%] t-mt-[30px]">
     <!-- Additional required wrapper -->
     <div class="swiper-wrapper t-text-center t-my-3">
         <!-- Slides -->
@@ -47,8 +48,8 @@
 
     </div>
     <!-- If we need navigation buttons -->
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev">◀</div>
+    <div class="swiper-button-next">▶</div>
 
 </div>
 
