--- a/templates/racket/racketMain.html
+++ b/templates/racket/racketMain.html
@@ -11,7 +11,7 @@
         테니스 라켓 콘텐츠</h1>
     <h3 class="d-flex justify-content-center mt-4 t-mb-9 t-text-[20px] sm:t-text-[20px] lg:t-text-[25px]  bannerfont">
         Powered by '세상에 나쁜 라켓은 없다'<br> since
-        2013</h3>
+        2014</h3>
     <marquee scrollamount=8>
         <h4 class="mt-4 t-mb-9 t-text-[11px] sm:t-text-[13px] lg:t-text-[15px]">
             라켓은 계속 추가됩니다! 🧡╰( °▽° )_🎾</h4></marquee>
@@ -19,29 +19,29 @@
     <div class="t-grid sm:t-grid-cols-2 py-2 px-2 navbar-dark bg-dark">
         <div class="mb-2 t-flex-grow">
             <form class="" action="{% url 'racket:racketMain'%}">
-                <input class="form-control-lg  t-ml-[3px]" type="search" name="searchKeyword"
-                       placeholder="라켓 이름"
+                <input class="form-control-lg  t-ml-[3px]" type="search" name="searchKeyword" placeholder="라켓 이름"
                        value="{{request.GET.searchKeyword}}" style="width:50%">
                 <button type="submit" class="btn btn-warning t-ml-[3px]">검 색</button>
             </form>
         </div>
+
         <div class="d-flex ">
-            <select class="btn btn-success t-flex-grow m-1" id="" name="" style=""
-                    onchange="location.href = this.value;">
+            <select class="btn btn-success t-flex-grow m-1" id="" name="brand" style=""
+                    onchange="location.href  = '?searchKeyword={{request.GET.searchKeyword}}&sortBrand=' + this.value + '&sort={{request.GET.sort}}';">
                 {%for item in racketBrandItems%}
                 <option value="" selected disabled hidden>라켓 브랜드별 검색</option>
-                <option class="" value="?sortBrand={{item.id}}">{{item.name}}</option>
+                <option class="" value="{{item.id}}"><a href="?sortBrand{{item.id}}">{{item.name}}</a></option>
                 {%endfor%}
 
             </select>
 
             <select class="btn btn-warning  t-flex-grow m-1" id="sort-select" name="sort-select" style=""
-                    onchange="location.href = this.value;">
-                <option class="" value="/" selected>전체정렬기능</option>
-                <option class="sort-names" value="?sort=names">이름순</option>
-                <option class="sort-adminScore" value="?sort=adminScore">세나라평점순</option>
-                <option class="sort-visitorScore" value="?sort=visitorScore">사용자평점순</option>
-                <option class="sort-like" value="?sort=countLike">좋아요순</option>
+                    onchange="location.href = '?searchKeyword={{request.GET.searchKeyword}}&sort=' + this.value + '&sortBrand={{request.GET.sortBrand}}';">
+                <option value="" selected disabled hidden>정렬</option>
+                <option class="sort-names" value="names">이름순</option>
+                <option class="sort-adminScore" value="adminScore">세나라평점순</option>
+                <option class="sort-visitorScore" value="visitorScore">사용자평점순</option>
+                <option class="sort-like" value="countLike">좋아요순</option>
                 {% if user.is_authenticated %}
                 <option class="sort-mypost t-hidden" value="?sort=mypost">좋아요 순으로 구현 예정</option>
                 {% endif %}
@@ -56,10 +56,14 @@
             {%for item in racketItems%}
             <li class="t-group">
                 {% if item.countLike %}
-                    <div class="bg-warning t-inline-flex t-pr-[20px]" style="border-radius: 12px 12px 0 0">&nbsp&nbsp🧡 + {{item.countLike}}</div>
-                    {% else %}
-                    <div class="t-bg-gray-300 t-inline-flex t-pr-[20px]" style="border-radius: 12px 12px 0 0">&nbsp&nbsp🤍 + 0</div>
-                    {% endif %}
+                <div class="bg-warning t-inline-flex t-pr-[20px]" style="border-radius: 12px 12px 0 0">&nbsp&nbsp🧡 +
+                    {{item.countLike}}
+                </div>
+                {% else %}
+                <div class="t-bg-gray-300 t-inline-flex t-pr-[20px]" style="border-radius: 12px 12px 0 0">&nbsp&nbsp🤍 +
+                    0
+                </div>
+                {% endif %}
                 <a href="{%url 'racket:racketDetail' item.id%}"
                    class="t-block t-block overflow-hidden ">
                     <img src="{{item.thumb_img_url}}" style="aspect-ratio: 1 / 1"
@@ -113,12 +117,14 @@
         {% if page_number == racketItems.number %}
         <li class="page-item active" aria-current="page">
             <a class="page-link"
-               href="?page={{ page_number }}&searchKeyword={{request.GET.searchKeyword}}&sort={{request.GET.sort}}&sortBrand={{request.GET.sortBrand}}">{{ page_number }}</a>
+               href="?page={{ page_number }}&searchKeyword={{request.GET.searchKeyword}}&sort={{request.GET.sort}}&sortBrand={{request.GET.sortBrand}}">
+                {{ page_number }}</a>
         </li>
         {% else %}
         <li class="page-item">
             <a class="page-link"
-               href="?page={{ page_number }}&searchKeyword={{request.GET.searchKeyword}}&sort={{request.GET.sort}}&sortBrand={{request.GET.sortBrand}}">{{ page_number }}</a>
+               href="?page={{ page_number }}&searchKeyword={{request.GET.searchKeyword}}&sort={{request.GET.sort}}&sortBrand={{request.GET.sortBrand}}">
+                {{ page_number }}</a>
         </li>
         {% endif %}
         {% endif %}
@@ -148,16 +154,9 @@
 
 <script>
 
-$(function() {
-    var selectValue = sessionStorage.getItem("selectValue"); //세션에 저장된 selectValue 가져옴
-    if(selectValue != null) { // 만약에 세션에 selectValue가 존재시
-        $("select[name=sort-select]").val(selectValue); // name을 찾아 해당 값을 selectValue로 바꿔줌
-    }
+$('select[name=brand]').last().val('{{request.GET.sortBrand}}');
+$('select[name=sort-select]').last().val('{{request.GET.sort}}');
 
-    $("select[name=sort-select]").on("change", function() { // name에 해당하는 select가 on-change 되었을 경우
-        sessionStorage.setItem("selectValue", $(this).val()); // 세션의 selectValue에 $(this).val()을 부여.
-    });
-})
 
 
 
