일부디자인변경

--- a/templates/player/playerDetail.html
+++ b/templates/player/playerDetail.html
@@ -96,9 +96,9 @@
                     </div>
 
                     {%else%}
-                    <div>로그인 후 이용할 수 있습니다.
-                        <a href="{%url 'account:kakaologin'%}"> <img src="https://i.imgur.com/zBJaCQd.png"
-                                                                     width="60"></a></div>
+                    <div class="my-2">로그인 후 이용할 수 있습니다.
+                        <a href="{%url 'account:kakaologin'%}" class="">
+                            <img src="https://i.imgur.com/zBJaCQd.png" class="t-inline-block" width="60"></a></div>
                     {%endif%}
 
                 </div>
