--- a/templates/player/playerMain.html
+++ b/templates/player/playerMain.html
@@ -57,7 +57,7 @@
 
                 </div>
 
-                <section class="t-border t-border-gray-300">
+                <section class="t-border t-bg-gray-100 t-border-gray-300">
 
                     <div class="d-flex justify-content-center container mx-auto">
                         <ul class="t-flex"> {%for item1 in characteristicItems%}
