--- a/templates/about/aboutSNR.html
+++ b/templates/about/aboutSNR.html
@@ -9,15 +9,21 @@
         세상에 나쁜 라켓은 없다<br></h1>
 
 
+
         <div class="d-flex justify-content-center t-mt-[50px]  t-text-[11px] sm:t-text-[13px] lg:t-text-[15px]">
-            서비스 이용 중 문제가 되는 부분이나 건의사항, 문의는 다음으로 접촉을 부탁드립니다. </div><br>
-            <div class="d-flex justify-content-center t-mb-[60px]">등록되지 않은 라켓이나 선수 또한 요청시 추가해드립니다.</div>
+            서비스 이용 중 문제가 되는 부분이나 건의사항, 문의는 아래의 이메일로 접촉을 부탁드립니다. </div><br>
+            <div class="d-flex justify-content-center t-mb-[15px]">등록되지 않은 라켓이나 선수 또한 요청시 추가해드립니다.</div>
+    <div class="d-flex justify-content-center t-mb-[60px]">잘못된 정보에 대해서 수정 요청도 적용해 드리겠습니다.</div>
 
 </div>
 
-<div class="d-flex justify-content-center t-text-[25px] sm:t-text-[40px] lg:t-text-[45px] ">[THANK YOU FOR VISITING]</div>
-        <div class="d-flex justify-content-center">managesnr@gmail.com</div>
-        <div class="d-flex justify-content-center">Copyrightⓒ2014 by managesnr@gmail.com</div>
+<div class="d-flex justify-content-center t-text-[25px] sm:t-text-[40px] lg:t-text-[45px] bg-dark t-text-white">[THANK YOU FOR VISITING]
+    </div>
+        <div class="d-flex justify-content-center ">managesnr@gmail.com</div>
+        <div class="d-flex justify-content-center mb-3">Copyrightⓒ2014 by managesnr@gmail.com</div>
+
+    <div class="d-flex justify-content-center"><img src="https://i.imgur.com/0fDAAdi.png" alt="" class="t-inline-block"  style="aspect-ratio: 1 / 1"></div>
+
 
 
 {%endblock%}
