--- a/templates/main.html
+++ b/templates/main.html
@@ -6,7 +6,7 @@
 
 <div>
     <h1 class="d-flex justify-content-center mt-7 t-text-[30px] sm:t-text-[50px] lg:t-text-[60px] xl:t-text-[70px] bannerfont">
-        세상에 나쁜 라켓은 없다!!!!<br></h1>
+        세상에 나쁜 라켓은 없다<br></h1>
 
     <marquee scrollamount=8>
         <h4 class="mt-3 t-mb-9 t-text-[11px] sm:t-text-[13px] lg:t-text-[15px]">
