--- a/templates/racket/racketDetail.html
+++ b/templates/racket/racketDetail.html
@@ -23,9 +23,9 @@
                 </div>
                 <div class="card t-tm-3 t-bg-white t-text-black">
                     <div class="card-header">
-                        <div class="d-flex justify-content-center">
-                            <img class="fadein mt-3 t-bg-white" src="{{racketItems.thumb_img_url}}" style="aspect-ratio: 1 / 1"
-                                  width="50%"></div>
+                        <div class="d-flex justify-content-center ">
+                            <img class="fadein mt-3 t-bg-white sm:t-max-w-sm" width="100%"
+                                 src="{{racketItems.thumb_img_url}}" style="aspect-ratio: 1 / 1"></div>
                         <br>
                         <div class="t-text-[10px] sm:t-text-[15px]">
                             <span class="t-text-[15px] sm:t-text-[25px]">{{racketItems.brand.name}}</span><br>
