--- a/base/static/common.css
+++ b/base/static/common.css
@@ -476,6 +476,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   z-index: 0;
 }
 
+.t-z-\[-1\] {
+  z-index: -1;
+}
+
+.t-z-\[10\] {
+  z-index: 10;
+}
+
 .t-my-3 {
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
