--- a/templates/player/playerDetail.html
+++ b/templates/player/playerDetail.html
@@ -47,7 +47,7 @@
                                 <div class="mx-1 t-inline-block t-group t-relative">
                                     <img src="{{item.thumb_img_url}}" style="aspect-ratio: 1/1"
                                          class="aa t-relative t-w-[100px] t-border t-border-gray-300 t-bg-white t-transition-all group-hover:t-border-blue-400 group-hover:t-border-4">
-                                    <p class="arrow_box group-hover:t-block t-hidden">{{item.Characteristic}}</p>
+                                    <p class="arrow_box group-hover:t-block t-hidden t-z-[10]">{{item.Characteristic}}</p>
                                 </div>
                                 {%endfor%}
                                 {%endif%}
@@ -104,7 +104,7 @@
                 </div>
 
                 <div class="card t-tm-3 ">
-                    <h3 class="t-mt-[60px] mb-3 t-text-3xl">이 선수를 응원합니다! ╰(*°▽ °*)╯</h3>
+                    <h3 class="t-mt-[60px] mb-3 t-text-2xl">이 선수를 응원합니다! <br>❤╰(*°▽ °*)╯</h3>
 
                     <div class="card-footer">
                         <table class="table table-hover">
