--- a/templates/racket/racketMain.html
+++ b/templates/racket/racketMain.html
@@ -17,16 +17,16 @@
             라켓은 계속 추가됩니다! 🧡╰( °▽° )_🎾</h4></marquee>
 
     <div class="t-grid sm:t-grid-cols-2 py-2 px-2 navbar-dark bg-dark">
-        <div class="mb-2 t-flex-grow">
+        <div class="t-flex t-items-center">
             <form class="" action="{% url 'racket:racketMain'%}">
                 <input class="form-control-lg  t-ml-[3px]" type="search" name="searchKeyword" placeholder="라켓 이름"
-                       value="{{request.GET.searchKeyword}}" style="width:50%">
+                       value="{{request.GET.searchKeyword}}" style="width:80%">
                 <button type="submit" class="btn btn-warning t-ml-[3px]">검 색</button>
             </form>
         </div>
 
         <div class="d-flex ">
-            <select class="btn btn-success t-flex-grow m-1" id="" name="brand" style=""
+            <select class="btn btn-dark t-flex-grow m-1" id="" name="brand" style=""
                     onchange="location.href  = '?searchKeyword={{request.GET.searchKeyword}}&sortBrand=' + this.value + '&sort={{request.GET.sort}}';">
                 {%for item in racketBrandItems%}
                 <option value="" selected disabled hidden>라켓 브랜드별 검색</option>
@@ -35,7 +35,7 @@
 
             </select>
 
-            <select class="btn btn-warning  t-flex-grow m-1" id="sort-select" name="sort-select" style=""
+            <select class="btn btn-dark  t-flex-grow m-1" id="sort-select" name="sort-select" style=""
                     onchange="location.href = '?searchKeyword={{request.GET.searchKeyword}}&sort=' + this.value + '&sortBrand={{request.GET.sortBrand}}';">
                 <option value="" selected disabled hidden>정렬 기능</option>
                 <option class="sort-names" value="names">이름순</option>
