--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'common.css' %}">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
-<!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css">-->
+    <!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css">-->
 
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 
@@ -24,14 +24,11 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 
-  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
-
-
-
-
+    <link rel="shortcut icon" href="{% static 'favicon.ico' %}"/>
 
 
 </head>
@@ -59,7 +56,7 @@
                 <a class="nav-link" aria-current="page" href="{%url 'racket:racketMain'%}">라켓</a>
                 <a class="nav-link" href="{%url 'player:playerMain'%}" tabindex="-1" aria-disabled="true">선수도감</a>
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">스트링</a>
-                <a class="nav-link " href="{%url 'aboutSNR'%}"  aria-disabled="true">About 세나라</a>
+                <a class="nav-link " href="{%url 'aboutSNR'%}" aria-disabled="true">About 세나라</a>
 
             </div>
         </div>
@@ -68,11 +65,12 @@
 
         {%if user.is_authenticated%}
 
-        <a href="{%url 'account:logOut'%}" >
+        <a href="{%url 'account:logOut'%}">
             <button type="button" class="btn btn-dark text-nowrap">{{user.name}}
-            <img class="t-w-[22px] t-h-[22px] t-rounded-full t-object-fit t-inline-block" src="{{ user.profile_img.url }}">&nbsp</button>
+                <img class="t-w-[22px] t-h-[22px] t-rounded-full t-object-fit t-inline-block"
+                     src="{{ user.profile_img.url }}">&nbsp
+            </button>
         </a>
-
 
 
         {% else %}
@@ -84,8 +82,6 @@
 
     </div>
 </nav>
-
-
 
 
 {% block content %}
