라켓리스트수정

--- a/templates/racket/racketDetail.html
+++ b/templates/racket/racketDetail.html
@@ -24,15 +24,16 @@
                     <div class="card-header">
                         <div class="d-flex justify-content-center ">
                             <img class="fadein mt-3 t-bg-white sm:t-max-w-sm" width="100%"
-                                 src="{{racketItems.thumb_img_url}}" style="aspect-ratio: 1 / 1"></div>
+                                 src="{{racketItems.thumb_img_url}}"></div>
                         <br>
                         <div class="t-text-[10px] sm:t-text-[15px]">
                             <span class="t-text-[15px] sm:t-text-[25px]">{{racketItems.brand.name}}</span><br>
-                            <span>무게 : {{racketItems.weight}} gr</span><br>
+                            <span>무게 : {{racketItems.weight}} gr(strung)</span><br>
+                            <span>강성 : {{racketItems.stiffness}} RA</span><br>
                             <span>패턴 : {{racketItems.pattern}}</span><br>
                             <span>헤드사이즈 : {{racketItems.headsize}} sq</span><br>
                             <span>길이 : {{racketItems.length}} in</span><br>
-                            <span>밸런스 : {{racketItems.balance}} mm</span></div>
+                            <span>밸런스 : {{racketItems.balance}}</span></div>
 
 
                     </div>
