--- a/templates/about/aboutSNR.html
+++ b/templates/about/aboutSNR.html
@@ -3,29 +3,19 @@
 
 {% block content %}
 
+    <h1 class="d-flex justify-content-center t-mt-[100px] t-text-[30px] sm:t-text-[50px] lg:t-text-[60px] xl:t-text-[70px] bannerfont">
+        감사합니다!<br></h1>
 
-<div>
-    <h1 class="d-flex justify-content-center mt-7 t-text-[30px] sm:t-text-[50px] lg:t-text-[60px] xl:t-text-[70px] bannerfont">
-        세상에 나쁜 라켓은 없다<br></h1>
-
-
-    <div class="d-flex justify-content-center t-mt-[50px]  t-text-[11px] sm:t-text-[13px] lg:t-text-[15px]">
-        서비스 이용 중 문제가 되는 부분이나 건의사항, 문의는 아래의 이메일로 접촉을 부탁드립니다.
-    </div>
-    <br>
-    <div class="d-flex justify-content-center t-mb-[15px]">등록되지 않은 라켓이나 선수 요청시 추가해드립니다.</div>
-    <div class="d-flex justify-content-center t-mb-[60px]">잘못된 정보에 대해서 수정요청 또한 검토 후 적용해 드리겠습니다.</div>
-
+<div class="d-flex justify-content-center t-mt-[150px] t-text-[25px] sm:t-text-[40px] lg:t-text-[45px] bg-dark t-text-white">
+    [THANK YOU FOR VISITING]
 </div>
+<div class="d-flex justify-content-center mt-5">managesnr@gmail.com</div>
+<div class="d-flex justify-content-center mb-4">Copyrightⓒ2014 by managesnr@gmail.com</div>
 
-<div class="d-flex justify-content-center t-text-[25px] sm:t-text-[40px] lg:t-text-[45px] bg-dark t-text-white">[THANK
-    YOU FOR VISITING]
+<div class="d-flex justify-content-center">
+    <img src="https://i.imgur.com/0fDAAdi.png" alt="" class="t-inline-block"
+         style="aspect-ratio: 1 / 1">
 </div>
-<div class="d-flex justify-content-center mt-3">managesnr@gmail.com</div>
-<div class="d-flex justify-content-center mb-3">Copyrightⓒ2014 by managesnr@gmail.com</div>
-
-<div class="d-flex justify-content-center"><img src="https://i.imgur.com/0fDAAdi.png" alt="" class="t-inline-block"
-                                                style="aspect-ratio: 1 / 1"></div>
 
 
 {%endblock%}
