--- a/templates/layout.html
+++ b/templates/layout.html
@@ -47,6 +47,9 @@
                 <a class="nav-link" aria-current="page" href="{%url 'racket:racketMain'%}">라켓</a>
                 <a class="nav-link" href="{%url 'player:playerMain'%}" tabindex="-1" aria-disabled="true">선수도감</a>
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">스트링</a>
+                {% if user.is_authenticated %}
+                <a href="{%url 'feedback:feedbackSNR'%}" class=" nav-link text-yellow-200">피드백</a>
+                {%endif%}
                 <a class="nav-link " href="{%url 'aboutSNR'%}" aria-disabled="true">About 세나라</a>
             </div>
         </div>
