라켓이름과브랜드한국형으로변경

--- a/base/static/common.base.css
+++ b/base/static/common.base.css
@@ -157,3 +157,13 @@ html > body .hidden{
 text-align: center;
 }
 
+.racketlist{
+  color : black;
+  text-decoration: none;
+}
+
+.racketlist:hover{
+  color : red;
+  text-decoration: none;
+
+}
