--- a/templates/feedback/feedbackSNR.html
+++ b/templates/feedback/feedbackSNR.html
@@ -8,7 +8,6 @@
     <h1 class="d-flex justify-content-center mt-7 t-text-[30px] sm:t-text-[50px] lg:t-text-[60px] xl:t-text-[70px] bannerfont">
         피드백<br></h1>
 
-
     <div class="d-flex justify-content-center t-mt-[50px]  t-text-[11px] sm:t-text-[13px] lg:t-text-[15px]">
         서비스 이용 중 문제가 되는 부분이나 건의사항, 문의는 아래에 작성해 주시기 바랍니다.
     </div>
@@ -18,6 +17,11 @@
     </div>
     <div class="d-flex justify-content-center t-mb-[60px] t-text-[11px] sm:t-text-[13px] lg:t-text-[15px]">잘못된 정보에 대해서
         수정요청 또한 검토 후 적용해 드리겠습니다.
+
+    </div>
+
+    <div class="t-text-green-500 d-flex justify-content-center t-mb-[60px] t-text-[11px] sm:t-text-[13px] lg:t-text-[15px]">완료된 요청은 안내없이 삭제됩니다.
+
     </div>
 
 </div>
@@ -29,6 +33,7 @@
         <form action="{% url 'feedback:feedbackSNR'%}" method="POST">
             {%csrf_token%}
             <div>질문 등록</div>
+
 
             <textarea class="form-control t-inline-block" name="content" id="exampleFormControlTextarea1" rows="4"
                       maxlength="200"></textarea>
@@ -61,7 +66,7 @@
 
         <tbody>
         {%for question in questions%}
-        {%if question.visitorAccount == user.providerAccountsId%}
+        {%if question.visitorAccount_id == request.user.id%}
 
         <tr>
             <td>
