--- a/templates/racket/racketDetail.html
+++ b/templates/racket/racketDetail.html
@@ -17,7 +17,7 @@
             <div class="my-3">
                 <div>
                     <div class="fadein t-text-[30px] sm:t-text-[40px] lg:t-text-[50px] xl:t-text-[50px] m-3 fw-bold mx-auto t-whitespace-nowrap">
-                        - {{racketItems.name}} -
+                        - {{racketItems.k_name}} -
                     </div>
                 </div>
                 <div class="card t-tm-3 t-bg-white t-text-black">
@@ -27,7 +27,7 @@
                                  src="{{racketItems.thumb_img_url}}"></div>
                         <br>
                         <div class="t-text-[10px] sm:t-text-[15px]">
-                            <span class="t-text-[15px] sm:t-text-[25px]">{{racketItems.brand.name}}</span><br>
+                            <span class="t-text-[15px] sm:t-text-[25px]">[{{racketItems.brand.k_name}}]</span><br>
                             <span>무게 : {{racketItems.weight}} gr(strung)</span><br>
                             <span>강성 : {{racketItems.stiffness}} RA</span><br>
                             <span>패턴 : {{racketItems.pattern}}</span><br>
@@ -184,7 +184,7 @@
                                 <span class="t-hidden spanVisitorAccount">{{item1.visitorAccount.username}}</span>
                                 <img class="t-w-[22px] t-h-[22px] t-rounded-full t-object-fit t-inline-block"
                                      src="{{ item1.visitorAccount.profile_img.url }}"/>{{item1.visitorAccount.name}}
-                                <span class="control hidden" id="control_id{{ forloop.counter0 }}">
+                                <div class="control hidden" id="control_id{{ forloop.counter0 }}">
                                 <ul class="d-flex justify-content-center">
                                     <li class="modifyReview{{ item1.id }}">
                                         <input type="button" class="btn btn-light" value="수정"
@@ -206,7 +206,7 @@
                                     </li>
 
                                 </ul>
-                                    </span>
+                                    </div>
                             </td>
                         </tr>
                         {%endfor%}
@@ -240,8 +240,8 @@ $("#spanUserName").text() //# = 태그의 아이디로서 태그값을 가져온
 $(".spanVisitorAccount") //. = 태그의 클래스로서 태그값을 가져온다
 $(".spanVisitorAccount")[0].innerHTML
 
-for(i = 0; i < $(".spanVisitorAccount").length; i++){
-  if($("#spanUserName").text() == $(".spanVisitorAccount")[i].innerHTML){
+for(i = 0; i < $(".spanVisitorAccount").length; i++){  // 등록된 글의 사용자 계정 수 만큼 루프문을 돌림
+  if($("#spanUserName").text() == $(".spanVisitorAccount")[i].innerHTML){ //로그인중인 사용자 계정과 글의 계정이 같은 경우
     $("#control_id"+i).removeClass("hidden");
     $(".reviewForm").addClass("hidden");
     $("h4").html("✅ 남겨주신 후기에 감사드립니다.");
